Create banner section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,22 @@
             <a href=""><i class="fas fa-envelope-open-text icon-x"></i>İletişim</a>
         </nav>
     </section>
+
+    <section id="banner">
+        <div id="black">
+            
+        </div>
+        
+        <div id="content">
+            <h2>Company A</h2>
+            <hr width="300" align="left">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum officiis similique, quae explicabo atque impedit autem harum tenetur quisquam a labore debitis quas quaerat ipsum deserunt sint ipsa. Suscipit, atque.
+                Ullam voluptatum dolores, id nobis sint magni voluptate debitis et officia nam quo adipisci asperiores iusto illo soluta maxime animi sit! Neque veniam quia eligendi quas sit fuga! Doloribus, voluptate?
+                Aspernatur sint cupiditate vero deleniti numquam natus ullam dignissimos suscipit aliquid at, obcaecati earum accusamus amet nam inventore molestias, nobis voluptas totam non! Delectus eveniet harum voluptates neque sapiente ipsa.
+            </p>
+        </div>
+    </section>
+
 </body>
 </html>
