Create about-us section

--- a/index.html
+++ b/index.html
@@ -43,5 +43,27 @@
         </div>
     </section>
 
+    <section id="about-us">
+        <h3>Hakkımızda</h3>
+        <div id="container">
+            <div id="left">
+                <h5 id="h5-left">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Molestiae inventore assumenda ad quo!
+                </h5>
+            </div>
+            <div id="right">
+                <span>L</span>
+                <p id="p-right">orem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis fugiat cum quod cumque aut, eius ex omnis distinctio animi amet provident totam, rerum quos doloribus iste sit necessitatibus nobis sed.</p>
+            </div>
+
+            <img src="img/about.jpg" alt="" class="img-fluid mt100">
+
+            <p id="p-end">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nostrum, praesentium, architecto deleniti tempora obcaecati laboriosam eveniet explicabo quas accusamus voluptate fuga ad laborum illum, itaque odio quae sunt nam?
+            </p>
+        </div>
+    </section>
+
 </body>
 </html>
