Create educations section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="owl/owl.theme.default.min.css">
 </head>
 <body>
     <section id="menu">
@@ -45,7 +48,7 @@
 
     <section id="about-us">
         <h3>Hakkımızda</h3>
-        <div id="container">
+        <div class="container">
             <div id="left">
                 <h5 id="h5-left">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
@@ -65,5 +68,50 @@
         </div>
     </section>
 
+    <section id="educations">
+        <div class="container">
+            <h3>Eğitimler</h3>
+            <div class="owl-carousel owl-theme">
+                <div class="card item" data-merge="1.5">
+                    <img src="img/r2.jpg" alt="" class="img-fluid">
+                    <h5 class="title-card">HTML5 ve CSS3 Eğitimi</h5>
+                    <p class="card-p">Lorem ipsum, dolor sit amet consectetur 
+                        adipisicing elit. Voluptas, porro!</p>
+                </div>
+
+                <div class="card item" data-merge="1.5">
+                    <img src="img/r2.jpg" alt="" class="img-fluid">
+                    <h5 class="title-card">HTML5 ve CSS3 Eğitimi</h5>
+                    <p class="card-p">Lorem ipsum, dolor sit amet consectetur 
+                        adipisicing elit. Voluptas, porro!</p>
+                </div>
+
+                <div class="card item" data-merge="1.5">
+                    <img src="img/r2.jpg" alt="" class="img-fluid">
+                    <h5 class="title-card">HTML5 ve CSS3 Eğitimi</h5>
+                    <p class="card-p">Lorem ipsum, dolor sit amet consectetur 
+                        adipisicing elit. Voluptas, porro!</p>
+                </div>
+
+                <div class="card item" data-merge="1.5">
+                    <img src="img/r2.jpg" alt="" class="img-fluid">
+                    <h5 class="title-card">HTML5 ve CSS3 Eğitimi</h5>
+                    <p class="card-p">Lorem ipsum, dolor sit amet consectetur 
+                        adipisicing elit. Voluptas, porro!</p>
+                </div>
+
+                <div class="card item" data-merge="1.5">
+                    <img src="img/r2.jpg" alt="" class="img-fluid">
+                    <h5 class="title-card">HTML5 ve CSS3 Eğitimi</h5>
+                    <p class="card-p">Lorem ipsum, dolor sit amet consectetur 
+                        adipisicing elit. Voluptas, porro!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    <script src="owl/owl.carousel.min.js"></script>
+    <script src="owl/script.js"></script>
 </body>
 </html>
