Write team section

--- a/index.html
+++ b/index.html
@@ -110,6 +110,41 @@
         </div>
     </section>
     
+    <section id="team">
+        <div class="container">
+            <h3 id="team-h3">Ekip</h3>
+            <div class="column-left-right">
+                <img src="img/ekip1.jpg" alt="" class="img-fluid oval">
+                <h4 class="employee-name">Mustafa Kemal Kurudağ</h4>
+                <p class="employee-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, nobis.</p>
+                <div class="employee-socials">
+                    <a href="#" class=""><i class="fab fa-twitter social"></i></a>
+                    <a href="#"><i class="fab fa-linkedin social"></i></a>
+                    <a href="#"><i class="fab fa-instagram social"></i></a>
+                </div>
+            </div>
+            <div class="column">
+                <img src="img/ekip2.jpg" alt="" class="img-fluid oval">
+                <h4 class="employee-name">Erdem Horoz</h4>
+                <p class="employee-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, nobis.</p>
+                <div class="employee-socials">
+                    <a href="#" class=""><i class="fab fa-twitter social"></i></a>
+                    <a href="#"><i class="fab fa-linkedin social"></i></a>
+                    <a href="#"><i class="fab fa-instagram social"></i></a>
+                </div>
+            </div>
+            <div class="column-left-right">
+                <img src="img/ekip3.jpg" alt="" class="img-fluid oval">
+                <h4 class="employee-name">Gökhan Güneş</h4>
+                <p class="employee-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, nobis.</p>
+                <div class="employee-socials">
+                    <a href="#" class=""><i class="fab fa-twitter social"></i></a>
+                    <a href="#"><i class="fab fa-linkedin social"></i></a>
+                    <a href="#"><i class="fab fa-instagram social"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="owl/owl.carousel.min.js"></script>
     <script src="owl/script.js"></script>
