Write Footer and contact sections

--- a/index.html
+++ b/index.html
@@ -145,6 +145,42 @@
             </div>
         </div>
     </section>
+    <section id="contact">
+        <div class="container">
+            <h3 id="h3-contact">İletişim</h3>
+            <div id="contact-opaque">
+                <div id="form-group">
+                    <div id="left-form">
+                        <input type="text" name="name" placeholder="Ad Soyad" required class="form-control">
+                        <input type="text" name="phone" placeholder="Telefon Numarası" required class="form-control">
+                    </div>
+                    <div id="right-form">
+                        <input type="email" name="email" placeholder="E-posta adresiniz" required class="form-control">
+                        <input type="text" name="subject" placeholder="Konu" required class="form-control">
+                    </div>
+                    <textarea name="message" id="" cols="30" rows="10" placeholder="Mesajınız..." class="form-control"></textarea>
+                    <input type="submit" value="Gönder">
+                </div>
+                <div id="address">
+                    <h4 id="address-title">Adres:</h4>
+                    <p class="address-p">Namık Kemal Mahallesi</p>
+                    <p class="address-p">Ahmet Arif Caddesi</p>
+                    <p class="address-p">Bugün sokak No: 456 </p>
+                    <p class="address-p">0123 456 78 90</p>
+                    E-posta: <a href="mailto:info@companya.com">info@companya.com</a>
+                </div>
+            </div>
+            <footer>
+                <div id="copyright">2021 Tüm hakları saklıdır.</div>
+                <div id="social-footer">
+                    <a href="#"><i class="fab fa-twitter social"></i></a>
+                    <a href="#"><i class="fab fa-linkedin social"></i></a>
+                    <a href="#"><i class="fab fa-instagram social"></i></a>
+                </div>
+                <a href="#menu" title="Yukarı"><i class="fas fa-chevron-circle-up" id="up"></i></a>
+            </footer>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="owl/owl.carousel.min.js"></script>
     <script src="owl/script.js"></script>
